# LaMETLat

./: .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml  requirements.txt  setup.py
debug/: add_err_to_samp.py  do_not_break_gvar.py
docs/: api_overview.html
example_plots/: make_plots.ipynb
examples/: alphas.py  bootstrap.ipynb  ft.py  generate_fake_data.py  gsfit.ipynb  gsfit.py  lanczos.ipynb  laplace_filter.ipynb  pdf_self_renorm.ipynb
examples/data/: .gitignore  Pion_PDF_MILC.txt  Pion_PDF_fake.txt  c2pt_mean.txt  da_fake_data.gv  fake_pt2.h5  fake_pt3_tsep10.h5  fake_pt3_tsep4.h5  fake_pt3_tsep6.h5  fake_pt3_tsep8.h5  fake_qda.h5  pion_p0.txt  qprop_1008_1608.txt  ratio_fake_data.gv  samples.txt
lametlat/extrapolation/: fit_funcs.py  lambda_extrapolation.py  prior_setting.py
lametlat/gsfit/: da_fit.py  fh_fit.py  fit_funcs.py  prior_setting.py  pt2_fit.py  ratio_fh_fit.py  ratio_fit.py  sum_fit.py
lametlat/matching/: kernels.py
lametlat/preprocess/: dispersion.py  print_h5.py  read_raw.py  resampling.py
lametlat/renormalization/: self_renormalization.py
lametlat/utils/: constants.py  fourier_transform.py  funcs.py  log.py  plot_settings.py  resampling.py
src/lametlat/: __init__.py
tests/: test_collinear_small_bT.py  test_correlators_pt2.py  test_correlators_pt3.py  test_correlators_qda.py  test_correlators_qda_ratio.py  test_correlators_ratio_fh.py  test_docs.py  test_ground_state_ff_fit.py  test_ground_state_fit_funcs.py  test_ground_state_pt2_fit.py  test_imports.py  test_plotting_corr_plots.py  test_resampling.py
(+36 files in other folders)
